# konstructcore

./: .gitignore  README.md  pyproject.toml
konstructcore/algo/: strings.py
konstructcore/datatypes/: prelude.py  result.py
konstructcore/datetime/: info.py  timebox.py
konstructcore/filesystem/: paths.py
konstructcore/tasks/: ext_task.py  mp_task.py  retry.py  runners.py  task.py
tests/konstructcore/tasks/: helpers.py  test_mp_task.py  test_runners.py
tests/konstructcore/tasks/ext_task/: test_simple_ext_tasks.py
